<resources>
    <string name="app_name">3DScanHelper</string>
    <string name="refresh">Refresh and disconnect from current</string>
    <string name="disconnect">Disconnect</string>
    <string name="failed_connection">Could not connect to device</string>
    <string name="start">Start taking pictures</string>
    <string name="modeSelection">Select scanning mode</string>
    <string name="automaticRB">Automatic</string>
    <string name="manualRB">Manual</string>
    <string name="pause_capturing">Pause capturing</string>
    <string name="step_back_and_delete_picture">Step back and delete picture</string>
    <string name="capture_image">Capture image</string>
    <string name="turn_flash_on">Turn flash on</string>
    <string name="empty_picture_folder">Empty picture folder</string>
    <string name="start_capturing">START CAPTURING</string>
    <string name="continue_workflow">Continue workflow</string>
</resources>
