<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    style="@style/Theme.AppCompat.DayNight.NoActionBar">

        <io.fotoapparat.view.CameraView
            android:id="@+id/camera_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/startWorkflowButton">
                <!--Tap to focus functionality-->
                <io.fotoapparat.view.FocusView
                    android:id="@+id/focus_View"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
        </io.fotoapparat.view.CameraView>

        <ImageButton
            android:id="@+id/flashButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_flash"
            android:layout_margin="32dp"
            app:backgroundTint="@android:color/white"
            android:contentDescription="@string/turn_flash_on"/>

        <!--<ImageButton
            android:id="@+id/emptyPictureFolderButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@android:drawable/ic_menu_delete"
            android:layout_margin="32dp"
            android:layout_alignParentEnd="true"
            app:backgroundTint="@android:color/white"
            android:contentDescription="@string/empty_picture_folder"/>-->

        <Button
            android:id="@+id/startWorkflowButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/captureImageButton"
            android:text="@string/start_capturing"
            />
        <ImageButton
            android:id="@+id/captureImageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@android:drawable/ic_menu_camera"
            android:layout_alignParentBottom="true"
            android:layout_margin="10dp"
            app:backgroundTint="@android:color/white"
            android:contentDescription="@string/capture_image"/>

        <ImageButton
            android:id="@+id/stepBackAndDeleteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@android:drawable/ic_menu_revert"
            android:layout_alignParentBottom="true"
            android:layout_margin="10dp"
            android:layout_centerHorizontal="true"
            app:backgroundTint="@android:color/white"
            android:contentDescription="@string/step_back_and_delete_picture"/>

        <ImageButton
            android:id="@+id/pauseButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@android:drawable/ic_media_pause"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_margin="10dp"
            app:backgroundTint="@android:color/white"
            android:contentDescription="@string/pause_capturing"/>
</RelativeLayout>