<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:gravity="center"
    android:orientation="vertical">

    <include
        android:id="@+id/loadingProgressBar"
        layout="@layout/progressdialog_layout"
        android:visibility="gone" />

    <TextView
        android:id="@+id/failedConnectionTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorFail"
        android:text="@string/failed_connection"
        android:textColor="@color/colorWhite"
        android:textSize="20sp"
        android:textStyle="bold"
        android:visibility="gone" />

    <GridLayout
        android:id="@+id/initialSetupGrid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:columnCount="2"
        android:rowCount="4"
        android:visibility="gone">
        <!--set number of pictures / rev-->
        <TextView
            android:textSize="20sp"
            android:layout_margin="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="0"
            android:text="Select number of \npictures taken/revolution" />
        <Spinner
            android:textSize="20sp"
            android:layout_margin="10dp"
            android:id="@+id/imageCountSpinner"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_width="wrap_content"
            android:minWidth="100dp"
            android:layout_height="wrap_content"
            />
        <!--select capturing mode-->
        <RadioGroup
            android:id="@+id/selectionRadioGroup"
            android:layout_gravity="center"
            android:layout_column="0"
            android:layout_row="2"
            android:layout_columnSpan="2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorLight"
            >

            <TextView
                android:textSize="20sp"
                android:layout_margin="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/modeSelection"/>

            <RadioButton
                android:id="@+id/manualModeRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/manualRB"
                android:textSize="20dp"
                android:onClick="onScanningModeSelectionChanged"
                />
            <RadioButton
                android:id="@+id/automaticModeRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/automaticRB"
                android:textSize="20dp"
                android:onClick="onScanningModeSelectionChanged"
                />
        </RadioGroup>
        <!--start button-->
        <Button
            android:textSize="20sp"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:text="@string/start"
            android:id="@+id/startScanningButton"
            android:layout_column="0"
            android:layout_row="3"
            android:layout_columnSpan="2"
            android:layout_gravity="center"
            />
    </GridLayout>
</LinearLayout>